force-app/main/default/objects/LV_Club_Setting__mdt/LV_Club_Setting__mdt.object-meta.xml
<CustomObject>
    <label>LV Club Setting</label>
    <pluralLabel>LV Club Settings</pluralLabel>
</CustomObject>