force-app/main/default/objects/LV_Club_Setting__mdt/fields/caProfilesFilter__c.field-meta.xml
<CustomField>
    <fullName>caProfilesFilter__c</fullName>
    <label>caProfilesFilter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>