force-app/main/default/objects/LV_Club_Setting__mdt/fields/clubNameFilter__c.field-meta.xml
<CustomField>
    <fullName>clubNameFilter__c</fullName>
    <label>clubNameFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>