force-app/main/default/objects/LV_Club_Setting__mdt/fields/skusProductCatalogueFiltered__c.field-meta.xml
<CustomField>
    <fullName>skusProductCatalogueFiltered__c</fullName>
    <label>skusProductCatalogueFiltered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>