force-app/main/default/objects/LV_Club_Setting__mdt/fields/skusProductReferentialsFiltered__c.field-meta.xml
<CustomField>
    <fullName>skusProductReferentialsFiltered__c</fullName>
    <label>skusProductReferentialsFiltered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>