force-app/main/default/objects/LV_Club_Setting__mdt/fields/statusClubFilteredList__c.field-meta.xml
<CustomField>
    <fullName>statusClubFilteredList__c</fullName>
    <label>statusClubFilteredList</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>